# Chemclaw3

./: .env.example  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  DECISIONS.md  DEFERRED.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/: README.md  __init__.py  audit.py  audit_store.py  authz.py  bo_tools.py  calc_tools.py  chemclaw_agent.py  cli.py  embedding_provider.py  framing.py  graph_tools.py  harness_todo.py  identity_context.py  interaction_tools.py  llm_provider.py  memory_tools.py  profiles.py  qm_tools.py  research_tools.py  search_tools.py  session_context.py  session_events.py  session_store.py  skill_access.py  tool_authz.py  tool_registry.py  verifier.py
agents/identity/: __init__.py  hpc_bridge.py  obo.py  workload.py
bo/: __init__.py  campaign.py  engine.py  objectives.py  problem.py
bo/benchmarks/: __init__.py  reizman_suzuki.py
bo/benchmarks/data/: NOTICE.md
calc/: __init__.py  migrate.py  pka.py  postgres_store.py  solubility.py  store.py  xtb.py  xtb_engine.py
chemclaw/: __init__.py  auth.py  chem.py  config.py  db.py  embeddings.py  errors.py  http.py  identity.py  ids.py  logging.py  temporal_client.py
deploy/: .dockerignore  Containerfile  README.md  entrypoint.sh
deploy/helm/chemclaw/: Chart.yaml  values.yaml
deploy/helm/chemclaw/templates/: _helpers.tpl  config.yaml  deployment-mcp.yaml  deployment-service.yaml  deployment-workers.yaml  migrate-job.yaml  networkpolicy.yaml  service-route.yaml
docs/: architektur.md  foundation-assessment.md  foundation-plan.md  harness-konzept.md  implementation-plan.md  implementation-tickets.md  parity-plan.md  research-review.md  runbook.md
docs/adr/: 0001-python-runtime.md  README.md
docs/audit/: 00-SUMMARY.md  01-inventory.md  02-baseline.md  03-consistency.md  04-security.md  05-correctness.md  06-duplication.md  07-architecture.md  08-agentic-engine-gaps.md  08-execution-plan.md  09-handover.md  09-knowledge-management-gaps.md  10-config-extensibility.md  11-handover.md  REFACTOR_LOG.md
eln/: __init__.py  adapter.py  chem.py  cursor.py  ingest.py  json_adapter.py  note.py  ord.py  ord_adapter.py  registry.py  sync.py  validate.py
eln/exports/: eln-2026-001.json  eln-2026-002.json
eln/exports/ord/: ord-2026-001.json
evals/: __init__.py  ab.py  baseline.json  baseline.py  harness.py  metric.py  metrics.py  retrieval.py
evals/cases/: bo-regret-reizman.md  green-esterification.md  pharma-solvent-heavy.md  retrieval-coupling-playbook-filter.md  retrieval-coupling.md  retrieval-cross-coupling-literal-miss.md  retrieval-precision-recall.md  retrieval-reflux-conditions.md  retrieval-suzuki.md  solubility-benzene.md
evals/retrieval_corpus/: README.md  campaign-suzuki-optimization.md  compound-aspirin.md  playbook-pd-cross-coupling.md  reaction-amide-edc.md  reaction-fischer-esterification.md  reaction-suzuki-biaryl.md
examples/: __init__.py  research_demo.py
infra/: README.md  docker-compose.yml
infra/sql/: 000_schema_migrations.sql  001_calculation_results.sql  002_molecule_fingerprints.sql  003_reaction_fingerprints.sql  004_fingerprint_definition.sql  006_audit_events.sql  007_sync_cursors.sql  008_sessions.sql  009_session_events.sql  010_audit_revision.sql  011_audit_hash_chain.sql  012_note_index.sql  013_session_owners.sql  014_session_event_dedupe.sql
kg/: __init__.py  git_submitter.py  graph.py  note.py  pr_gate.py  render.py  validate.py
knowledge/: README.md
mcp/: README.md
mcp_servers/: README.md  __init__.py  fpstore.py
mcp_servers/molfp/: __init__.py  fingerprint.py  postgres_store.py  search.py  server.py  store.py
mcp_servers/rxnfp/: __init__.py  fingerprint.py  search.py  server.py
memory/: __init__.py  campaign.py  chains.py  ids.py  interaction.py  jobs.py  optimization.py  playbook.py  similarity.py
report/: __init__.py  evidence.py  harness.py  hybrid.py  retrievers.py  vector_index.py
scripts/: __init__.py  schedules.py  validate_ord.py  validate_skills.py  verify_audit_chain.py
service/: __init__.py  app.py  auth.py  budget.py  events.py  runner.py
service/static/: app.js  index.html
skills/: README.md
skills/calculation-selection/: SKILL.md
skills/campaign-narrative-synthesis/: SKILL.md
skills/deep-research/: SKILL.md
skills/development-report/: SKILL.md
skills/eln-reaction-extraction/: SKILL.md
skills/experiment-design/: SKILL.md
skills/knowledge-graph-query/: SKILL.md
skills/knowledge-graph-write/: SKILL.md
skills/optimization-campaign-synthesis/: SKILL.md
skills/playbook-distillation/: SKILL.md
skills/qm-job-submission/: SKILL.md
skills/reaction-search/: SKILL.md
sources/: __init__.py  base.py  registry.py
tasks/: todo.md
tests/: __init__.py  conftest.py  pg.py  temporal_env.py  test_agent.py  test_audit.py  test_audit_chain.py  test_audit_store.py  test_auth.py  test_authz.py  test_bo.py  test_bo_campaign.py  test_bo_knowledge.py  test_bo_tools.py  test_budget.py  test_calc_tools.py  test_cli.py  test_config.py  test_cursor.py  test_datasource_seam.py  test_datasource_spec.py  test_db.py  test_eln.py  test_eln_recipes.py  test_eln_workflow.py  test_embedding_provider.py  test_embeddings.py  test_eval_drift.py  test_evals.py  test_framing.py  test_graph.py  test_graph_tools.py  test_harness_execution.py  test_harness_todo.py  test_hpc_bridge.py  test_http.py  test_hybrid_retrieval.py  test_identity.py  test_ids.py  test_interaction_approval.py  (+52 more)
workers/: README.md  __init__.py  background_worker.py  hpc_worker.py
workflows/: README.md  __init__.py  activities.py  bo_activities.py  bo_campaign.py  bo_knowledge.py  eln_sync.py  eval_drift.py  interaction_approval.py  knowledge.py  memory_jobs.py  models.py  notify.py  orchestrator.py  publish.py  qm_job.py  report_workflow.py
workflows/hpc/: __init__.py  nextflow.py
