[project]
name = "chemclaw"
version = "0.0.0"
description = "AI agent for pharmaceutical/chemical process R&D: MAF + Temporal + Agent Skills + a Markdown knowledge graph."
requires-python = ">=3.11"
# Runtime deps are added per phase, only when a module actually imports them
# (no speculative dependencies — see docs/adr/0001-python-runtime.md and CLAUDE.md).
dependencies = [
    "agent-framework-anthropic>=1.0.0b260709",
    "agent-framework-core>=1.11.0",
    "bofire[optimization]>=0.4.1",
    "drfp>=0.3.7",
    "llvmlite>=0.43",
    "mcp>=1.2.0",
    "mordredcommunity>=2.0.7",
    "networkx>=3.6.1",
    "numba>=0.60",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "python-frontmatter>=1.3.0",
    "rdkit>=2026.3.4",
    "scikit-learn>=1.9.0",
    "tblite>=0.7.0",
    "temporalio[pydantic]>=1.30.0",
]

[dependency-groups]
# Dev toolchain. `uv sync` installs these; `make` targets drive them.
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pre-commit>=3.8",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chemclaw"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Pragmatic-but-strict: correctness, bugs, imports, comprehensions, pyupgrade,
# plus mandatory docstrings (D) — CLAUDE.md requires a docstring on every module/function.
select = ["E", "F", "W", "I", "B", "C4", "UP", "D"]
# D203/D213 conflict with D211/D212; pick the modern (no blank line, summary-first) style.
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests document behavior in their names; module/function docstrings are not required there.
"tests/*" = ["D100", "D103"]

[tool.mypy]
python_version = "3.11"
strict = true
# Fail loudly on a half-configured type environment rather than silently skipping.
warn_unused_configs = true
warn_redundant_casts = true

# RDKit ships only partial type stubs (e.g. rdkit.Chem.AllChem attrs are dynamic),
# which produces false attr-defined errors. Skip analysing it so its names are
# treated as untyped rather than scattering per-call ignores across the codebase.
[[tool.mypy.overrides]]
module = ["rdkit.*", "bofire.*", "pandas", "sklearn.*", "frontmatter", "networkx.*", "drfp"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
